redesigned home page and css fixes for the bugs on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #root {
-  margin: 0 1rem;
+  margin: 0;
   text-align: center;
 }
 
