--- a/src/components/styles/about.css
+++ b/src/components/styles/about.css
@@ -1,7 +1,7 @@
 #about-section {
     opacity: 0;
     position: relative;
-    top: -1rem;
+    top: 10rem;
     -webkit-transition: all 0.3s ease;
 -moz-transition: all 0.3s ease;
 -o-transition: all 0.3s ease;
@@ -35,7 +35,7 @@ color: black;
 
 #about-me-banner {
     position: relative;
-    margin-top: 4rem;
+    top: 4rem;
     height: 20rem;
     width: 95%;
     object-fit: cover;
@@ -93,7 +93,7 @@ color: black;
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-top: 8rem;
+    top: 8rem;
     margin-right: 3rem;
 }
 
@@ -209,11 +209,5 @@ margin: 0.5rem;
 
     #about-bottom-images {
         flex-direction: row;
-    }
-}
-
-@media screen and (max-width: 450px) {
-    #about-footer {
-        top: 35rem;
     }
 }
