--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -1,10 +1,19 @@
 #header {
-    position: relative;
+    position: fixed;
     left: 0;
     top: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+    background-color: white;
+    z-index: 100000;
+    padding: 2rem 0;
+    -webkit-transition: all 500ms ease;
+    -moz-transition: all 500ms ease;
+    -ms-transition: all 500ms ease;
+    -o-transition: all 500ms ease;
+    transition: all 500ms ease;
     
 }
 
